# kuri2d

./: .gitignore  .tm_project.cache  CMakeLists.txt  Makefile  SDL_shish.c  SDL_shish.h  binreloc.c  editor.c  exit.c  init.c  kuri2d.apspec  kuri2d.c  kuri2d.h  kuri2d.lsm  logic.c  main.c  menu.c  svn-commit.tmp
data/maps/: map01.kmp  map02.kmp  map03.kmp
datadev/: block.xcf  data.txt
doc/: authors.txt  changelog.txt  install.txt  readme.txt  todo.txt
share/kuri2d/: kuri2d.desktop
share/kuri2d/maps/: default.kmp
src/: SConstruct  SDL_shish.c  SDL_shish.h  binreloc.h  editor.c  exit.c  game.c  init.c  kuri2d.c  kuri2d.h  logic.c  lose.c  main.c  menu.c  win.c
